--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -1988,26 +1988,32 @@ for resolution.
 \addcontentsline{toc}{section}{Index}
 \printindex
 
-
-\newpage
-\textbf{\large DK notes from GOC meeting on 2016-06-12} \label{mn:20160612}
-
-\includegraphics[height=8in]{meetings/20160612/20160612_meeting_notes.jpg}
-
-\newpage
-\textbf{\large DK notes from GOC meeting on 2016-06-17} \label{mn:20160617}
-
-\includegraphics[height=8in]{meetings/20160617/20160617_meeting_notes.jpg}
-
-\newpage
-\textbf{\large DK notes from GOC meeting on 2016-07-08} \label{mn:20160708}
-
-\includegraphics[height=8in]{meetings/20160708/20160708_meeting_notes.jpg}
-
-\newpage
-\textbf{\large BioOce QE rules, marked up by DK} \label{boqe}
-
-\includegraphics[height=8in]{marked_up_versions/bo_qe_20160708.pdf}
+% \newpage
+% \textbf{\large DK notes from GOC meeting on 2016-05-27} \label{mn:20160527}
+% 
+% \includegraphics[height=8in]{meetings/20160527/20160527_meeting_notes_page_1.png}
+% \newpage
+% \includegraphics[height=8in]{meetings/20160527/20160527_meeting_notes_page_2.png}
+% 
+% \newpage
+% \textbf{\large DK notes from GOC meeting on 2016-06-12} \label{mn:20160612}
+% 
+% \includegraphics[height=8in]{meetings/20160612/20160612_meeting_notes.jpg}
+% 
+% \newpage
+% \textbf{\large DK notes from GOC meeting on 2016-06-17} \label{mn:20160617}
+% 
+% \includegraphics[height=8in]{meetings/20160617/20160617_meeting_notes.jpg}
+% 
+% \newpage
+% \textbf{\large DK notes from GOC meeting on 2016-07-08} \label{mn:20160708}
+% 
+% \includegraphics[height=8in]{meetings/20160708/20160708_meeting_notes.jpg}
+% 
+% \newpage
+% \textbf{\large BioOce QE rules, marked up by DK} \label{boqe}
+% 
+% \includegraphics[height=8in]{marked_up_versions/bo_qe_20160708.pdf}
 
 
 %\includegraphics[height=8in]{marked_up_versions/bo_qe_20160708.pdf}
